added the calendar schedule page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3a678d</color>
     <color name="colorPrimaryDark">#244561</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#FBC617</color>
 </resources>
