Removed Cafe feature and fixed calendar bugs
removed the cafe page because it was unfinished and incomplete. fixed a bug where the calendar showed the wrong block rotations.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,13 @@
         style="@style/Widget.Design.BottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/colorPrimaryDark"
-        android:hapticFeedbackEnabled="false"
+        android:background="@color/darkBlue"
+        android:hapticFeedbackEnabled="true"
         app:itemIconTint="@color/bottom_navigation_colors"
         app:itemTextColor="@color/bottom_navigation_colors"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_navigation_menu" />
+        app:menu="@menu/bottom_navigation_menu"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
