--- a/app/src/main/res/layout/day.xml
+++ b/app/src/main/res/layout/day.xml
@@ -10,7 +10,7 @@
         android:id="@+id/date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@color/yellow"
         android:paddingVertical="5dp"
         android:paddingLeft="16dp"
         android:text="Date"
@@ -32,7 +32,7 @@
         android:id="@+id/day_rotation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@color/yellow"
         android:paddingVertical="5dp"
         android:paddingRight="16dp"
         android:text="Block Rotation"
