--- a/app/src/main/res/layout/fragment_annoucements.xml
+++ b/app/src/main/res/layout/fragment_annoucements.xml
@@ -9,7 +9,7 @@
         android:id="@+id/topBar"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
